<resources>
    <string name="app_name">SFSUApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_schedule_planner">SchedulePlanner</string>
    <string name="title_activity_staff_directory">Staff Directory</string>
    <string name="title_activity_class_catalog">ClassCatalog</string>

    <string name="alert_text">Alert Text</string>
    <string name="alert_text_required">Alert text is required.</string>
    <string name="time">Time</string>
    <string name="reminder">Reminder</string>
    <string name="alert_sound">Alert Sound</string>
    <string name="alert_sound_default">Default Sound</string>
    <string name="options">Options</string>
    <string name="vibrate">Vibrate</string>
    <string name="repeat">Repeat</string>
    <string-array name="reminder_array">
        <item>On Time</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>1 Hour</item>
    </string-array>

    <string name="shuttle_schedule">The express shuttle runs directly between Daly City BART and the campus,stopping at 19th Avenue.</string>

    <string name="whole_schedule">
           "<b>Hours</b>\n\n\tMonday through Thursday: 7:00 a.m. to 10:30 p.m.
                Last 19th Avenue pick-up at 10:00 p.m.
            \n\tFriday: 7:00 a.m. to 7:15 p.m.
                Last 19th Avenue pick-up at 6:50 p.m.
            \n\nSchedule is every 10 to 15 minutes\nShuttles stops: 19th Ave. and Daly City BART ONLY"
    </string>
    <string name="weekday_schedule">
           "<b>Hours</b>\n\n\tMonday through Thursday: 7:00 a.m. to 10:30 p.m.
                Last 19th Avenue pick-up at 10:00 p.m.
            \n\nSchedule is every 10 to 15 minutes\nShuttles stops: 19th Ave. and Daly City BART ONLY"
    </string>

    <string name="friday_schedule">
        "<b>Hours</b>\n\n\tFriday: 7:00 a.m. to 7:15 p.m.
                Last 19th Avenue pick-up at 6:50 p.m. \n\nSchedule is every 10 to 15 minutes\nShuttles stops: 19th Ave. and Daly City BART ONLY"

    </string>

    <string name="sfsu_links">Official Site: sfsu.edu\nApply to SFSU: sfsu.edu/prospect\nSFSU Bulletin: bulletin.sfsu.edu/ \n
    </string>
    <string name="daly_city_bart_express_shuttles">Daly City BART Express Shuttles</string>
    <string name="shuttle_map">Shuttle Map</string>
    <string name="map_image_view">Map Image view</string>
    <string name="time_to_next_shuttle">Time to Next Shuttle</string>
    <string name="_00_00">00:00</string>
    <string name="get_next_shuttle">Next Shuttle</string>

</resources>
