<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_text"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alert_text"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/time"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"
                    style="@style/Widget.AppCompat.Button.Colored"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/reminder"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_sound"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/alert_sound"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/alert_sound_default"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <CheckedTextView
                android:id="@+id/vibrate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/vibrate"/>

            <CheckedTextView
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/repeat"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>