<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="woverines.myapplication.MainActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="115dp"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/linearLayout2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/daly_city_bart_express_shuttles"
                android:id="@+id/textView5"
                android:autoText="false"
                android:maxLines="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/daySchedule" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/scrollView2"
        android:baselineAligned="false"
        android:weightSum="1"
        android:id="@+id/linearLayout2">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:id="@+id/ShuttleMapFrame"
                android:src="@drawable/smallmap"
                android:contentDescription="@string/map_image_view"
                android:layout_gravity="top"
                android:focusable="false"
                android:focusableInTouchMode="true" />
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:background="#a517e3"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shuttleDescription"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timerText"
                android:text="@string/_00_00"
                style="@style/AppTheme"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#ffffff"
                android:padding="5dp" />

            <Button
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:text="@string/get_next_shuttle"
                android:id="@+id/ShuttleButton"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
